--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -3,7 +3,7 @@
     height: 100vh;
     position: absolute;
     left: 20%;
-    scale: 0.98;
+    scale: 0.985;
     border-radius: 10px;
     background-color: #1a1b1f
 }
@@ -13,7 +13,7 @@
     height: 100vh;
     position: absolute;
     left: 0;
-    scale: 0.98;
+    scale: 0.985;
     border-radius: 10px;
     background-color: #1a1b1f
 }
@@ -23,13 +23,25 @@
     height: 100vh;
     position: absolute;
     left: 80%;
-    scale: 0.98;
+    scale: 0.985;
     border-radius: 10px;
     background-color: #1a1b1f
 }
 
-.inner-container {
+.inner-container-msg {
     min-height: 100%;
-    scale: 0.98;
+    scale: 0.995;
+    border-radius: 10px;
+}
+
+.inner-container-usr {
+    min-height: 100%;
+    scale: 0.99;
+    border-radius: 10px;
+}
+
+.inner-container-msc {
+    min-height: 100%;
+    scale: 0.99;
     border-radius: 10px;
 }
