--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -45,6 +45,7 @@
     scale: 0.99;
     border-radius: 10px;
 }
+
 .usr-row {
     width: 100%;
     scale: 0.99;
@@ -52,6 +53,7 @@
     overflow-x: hidden;
     overflow-y: auto;
 }
+
 .msc-row {
     width: 100%;
     scale: 0.99;
@@ -59,6 +61,15 @@
     overflow-x: hidden;
     overflow-y: auto;
 }
+
+.msg-row {
+    width: 100%;
+    scale: 0.99;
+    height: 92vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 .usr-card {
     width: 98%;
     height: 5rem;
@@ -72,13 +83,68 @@
     background-color: #1a1b1f;
 }
 
-::-webkit-scrollbar{
+.message {
+    width: 100%;
+    height: min-content;
+    border-color: transparent transparent transparent transparent;
+    background-color: white;
+}
+
+.sent {
+    padding: 5px;
+    border-radius: 10px;
+    background-color: #1a1b1f;
+    width: min-content;
+    height: min-content;
+    position: relative;
+}
+
+.received {
+    padding: 5px;
+    border-radius: 10px;
+    background-color: #1a1b1f;
+    width: min-content;
+    height: min-content;
+}
+
+.input-label {
+    width: 100%;
+    height: 7vh;
+    position: absolute;
+    bottom: 10px;
+}
+
+.input-text {
+    width: 80%;
+    height: 50%;
+    text-align: left;
+    position: absolute;
+    left: 5%;
+    bottom: 25%;
+    background-color: #1a1b1f;
+    border-radius: 10px;
+    border-color: transparent transparent transparent transparent;
+}
+
+.input-button {
+    width: 8%;
+    height: 50%;
+    background-color: #1a1b1f;
+    border-radius: 10px;
+    border-color: transparent transparent transparent transparent;
+    position: absolute;
+    bottom: 25%;
+    left: 86%;
+}
+
+::-webkit-scrollbar {
     width: 5px;
 }
 
 ::-webkit-scrollbar-track {
     background-color: transparent;
 }
+
 ::-webkit-scrollbar-thumb {
     background-color: #1a1b1f;
     border-radius: 100px;
