--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -94,7 +94,7 @@
     position: relative;
     left: 0;
     display: flex;
-    justify-content: right;
+    justify-content: center;
     align-items: center;
 }
 
@@ -128,7 +128,7 @@
 .profile {
     background-color: #1a1b1f;
     height: 10%;
-    width: 98%;
+    width: 80%;
     margin-top: 10px;
 }
 
@@ -188,17 +188,4 @@
     position: absolute;
     bottom: 15%;
     left: 86%;
-}
-
-::-webkit-scrollbar {
-    width: 5px;
-}
-
-::-webkit-scrollbar-track {
-    background-color: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: #1a1b1f;
-    border-radius: 100px;
 }
