--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 body {
     margin: 0;
 }
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #1a1b1f;
+    border-radius: 100px;
+}
