--- a/src/components/AddFriend.css
+++ b/src/components/AddFriend.css
@@ -44,3 +44,42 @@
     margin-top: 5px;
     margin-left: 5px;
 }
+.img {
+    max-width: 100%;
+    max-height: 80%;
+}
+
+.profile-img {
+    height: 6em;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 0;
+    top: -1px;
+}
+
+.profile-add {
+    height: 6em;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    position: relative;
+    right: -13px;
+    top: -1px;
+    border-color: transparent transparent transparent transparent;
+}
+
+.profile-username {
+    height: 6em;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 0;
+    top: -1px;
+}
