--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -92,46 +92,37 @@
 }
 
 .profile-img {
-    height: 5em;
+    max-height: 5em;
     width: 40%;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    right: 0;
-    top: -1px;
 }
 
 .profile-menu {
-    height: 5em;
+    max-height: 5em;
     width: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    position: relative;
-    right: -13px;
-    top: -1px;
     border-color: transparent transparent transparent transparent;
 }
 
 .profile-username {
-    height: 5em;
+    max-height: 5em;
     width: 40%;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    right: 0;
-    top: -1px;
 }
 
 .profile-activity {
-    height: 5em;
+    max-height: 5em;
+    width: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20%;
     font-size: small;
 }
 
@@ -141,7 +132,7 @@
 
 .profile {
     background-color: #1a1b1f;
-    height: 5em;
+    max-height: 5em;
     width: 80%;
     margin-top: 10px;
     border-color: transparent transparent transparent transparent;
