--- a/src/components/AddFriend.css
+++ b/src/components/AddFriend.css
@@ -43,6 +43,7 @@
     border-color: transparent transparent transparent transparent;
     margin-top: 5px;
     margin-left: 5px;
+    margin-right: 5px;
 }
 .img {
     max-width: 100%;
